# verbose-disco

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
BehavioralPatterns/: README.md
BehavioralPatterns/Iterators/BST/: BST.cpp  BST.h  readme.md
GenerativePatterns/AbstrractFactory/: AbstractFactory.cpp  AbstractFactory.h  readme.md
GenerativePatterns/Builder/: Builder.cpp  Builder.h  readme.md
GenerativePatterns/FactoryMethod/: FactoryMethod.cpp  FactoryMethod.h  readme.md
GenerativePatterns/Prototype/: Prototype.cpp  Prototype.h  readme.md
GenerativePatterns/Singleton/: Singleton.cpp  Singleton.h  readme.md
others/: inheritance.cpp  lrvalue.cpp  variardic_and_foldexpr.cpp
ranges/: ranges.cpp
